--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nrwl/angular": "^15.2.4",
+    "@taiga-ui/cdk": "^2.71.0",
+    "@taiga-ui/core": "^2.71.0",
+    "@taiga-ui/icons": "^2.71.0",
+    "@taiga-ui/kit": "^2.71.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0",
