Init Feature Lib + add first component - mentor list

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
       "@mentor-management-system/data-access": [
         "libs/data-access/src/index.ts"
       ],
+      "@mentor-management-system/feature": ["libs/feature/src/index.ts"],
       "@mentor-management-system/util": ["libs/util/src/index.ts"]
     }
   },
