--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@ngrx/component-store": "~15.0.0",
+    "@ngrx/effects": "~15.0.0",
+    "@ngrx/entity": "~15.0.0",
+    "@ngrx/router-store": "~15.0.0",
+    "@ngrx/store": "~15.0.0",
     "@nrwl/angular": "^15.2.4",
     "@taiga-ui/cdk": "^2.71.0",
     "@taiga-ui/core": "^2.71.0",
@@ -42,6 +47,8 @@
     "@angular/language-service": "~15.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@ngrx/schematics": "~15.0.0",
+    "@ngrx/store-devtools": "~15.0.0",
     "@nrwl/cypress": "15.3.0",
     "@nrwl/eslint-plugin-nx": "15.3.0",
     "@nrwl/jest": "15.3.0",
@@ -58,6 +65,7 @@
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "jasmine-marbles": "~0.9.1",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.3",
