--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~15.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@ngrx/component-store": "~15.0.0",
     "@ngrx/effects": "~15.0.0",
@@ -32,6 +33,8 @@
     "@taiga-ui/core": "^2.71.0",
     "@taiga-ui/icons": "^2.71.0",
     "@taiga-ui/kit": "^2.71.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -59,6 +62,7 @@
     "@nrwl/workspace": "15.3.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
+    "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "cypress": "^11.0.0",
