--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@taiga-ui/icons": "^2.71.0",
     "@taiga-ui/kit": "^2.71.0",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
