--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~15.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@ngrx/component-store": "~15.0.0",
@@ -63,6 +64,7 @@
     "@nrwl/workspace": "15.3.0",
     "@types/jest": "28.1.1",
     "@types/node": "18.7.1",
+    "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
