Add postgres integration (TODO: rename the guard for local)

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "@ngrx/component-store": "~15.0.0",
     "@ngrx/effects": "~15.0.0",
     "@ngrx/entity": "~15.0.0",
@@ -34,12 +35,16 @@
     "@taiga-ui/core": "^2.71.0",
     "@taiga-ui/icons": "^2.71.0",
     "@taiga-ui/kit": "^2.71.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typeorm": "^0.3.11",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
