--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -68,7 +68,10 @@
           "browserTarget": "frontend:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "proxyConfig": "tools/proxy/proxy.conf.json"
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
