--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -1,6 +1,14 @@
 version: '3.1'
 
 services:
+  backend:
+    image: mms-backend
+    container_name: mms-backend
+    build:
+      context: ../
+      dockerfile: Dockerfile
+    ports:
+      - '3000:3000'
   db:
     image: postgres:14.5
     restart: always
