Redirect back to login when 401

--- a/apps/backend/.env
+++ b/apps/backend/.env
@@ -2,5 +2,5 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USERNAME=root
 POSTGRES_PASSWORD=root
-JWT_EXPIRES_IN=1h
+JWT_EXPIRES_IN=30m
 JWT_SECRET=secret
