--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "@taiga-ui/core": "^2.71.0",
     "@taiga-ui/icons": "^2.71.0",
     "@taiga-ui/kit": "^2.71.0",
-    "@types/bcrypt": "^5.0.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "passport": "^0.6.0",
